[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/InteractiveObjects/GoldNugget/GoldNugget.gd" type="Script" id=1]
[ext_resource path="res://Scenes/InteractiveObjects/InteractiveObject.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/InteractiveObjects/GoldNugget/Gold.png" type="Texture" id=3]
[ext_resource path="res://Scenes/InteractiveObjects/GoldNugget/States/Idle.gd" type="Script" id=4]
[ext_resource path="res://AbstractClasses/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://Scenes/InteractiveObjects/GoldNugget/States/Follow.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 15.0

[node name="GoldNugget" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 1 )

[node name="FollowArea" type="Area2D" parent="." index="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowArea" index="0"]
shape = SubResource( 2 )

[node name="StatesMachine" type="Node" parent="." index="3"]
script = ExtResource( 5 )

[node name="Idle" type="Node" parent="StatesMachine" index="0"]
script = ExtResource( 4 )

[node name="Follow" type="Node" parent="StatesMachine" index="1"]
script = ExtResource( 6 )
